WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225017
Fix interpolation of the clip CSS property
https://bugs.webkit.org/show_bug.cgi?id=225017
Summary
Fix interpolation of the clip CSS property
Antoine Quint
Reported
2021-04-24 09:02:15 PDT
Fix interpolation of the clip CSS property
Attachments
Patch
(15.70 KB, patch)
2021-04-24 09:04 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-04-24 09:04:21 PDT
Created
attachment 426981
[details]
Patch
EWS
Comment 2
2021-04-24 12:33:30 PDT
Committed
r276552
(
236992@main
): <
https://commits.webkit.org/236992@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426981
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-24 12:34:15 PDT
<
rdar://problem/77108664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug